tests/cases/standard-library/ok/string/prelude-string-root.ari
fn main() -> i64 {
  var source = zone::create(16);
  var target = zone::create(16);

  let root: String = std::string::from(ref mut source, "ari");
  let copied: std::String = std::string::copy_to(ref root, ref mut target);

  let total = copied.len() + copied.capacity() + (copied.get(0) as i64);

  zone::destroy(target);
  zone::destroy(source);
  return total % 256;
}
