tests/cases/standard-library/errors/string/prelude-string-root-after-reset.ari
fn main() -> i64 {
  var zone = zone::create(16);
  let text: String = std::string::from(ref mut zone, "ari");
  zone::reset(ref mut zone);
  return text.len();
}
